--- a/settings.json
+++ b/settings.json
@@ -1,21 +1,24 @@
 {
   "workbench.colorTheme": "Learn with Sumit - Vintage",
   "editor.wordWrap": "on",
-  "editor.minimap.enabled": false,
+  "editor.minimap.enabled": true,
   "window.zoomLevel": 1,
   //Live server config
   "liveServer.settings.donotShowInfoMsg": true,
   //Material icon theme config
   "workbench.iconTheme": "material-icon-theme",
   // Cursor
-  "editor.cursorSmoothCaretAnimation": true,
+  "editor.cursorSmoothCaretAnimation": "on",
+  "editor.cursorWidth": 3,
   "editor.cursorBlinking": "expand",
   // Controls the font family.
-  "editor.fontFamily": "Fira Code,Operator Mono",
+  "editor.fontFamily": "Cascadia Code,Fira Code iScript,Operator Mono",
   // Enables font ligatures
-  "editor.fontLigatures": true,
-  "editor.fontSize": 16,
-  "editor.fontWeight": "500", //medium
+  // "editor.fontLigatures": true,
+  // "editor.fontLigatures": "'calt', 'ss01'",
+  "editor.fontLigatures": "'calt','ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'zero', 'onum'",
+  "editor.fontSize": 15.5,
+  "editor.fontWeight": "400", //regular
   "editor.tokenColorCustomizations": {
     "textMateRules": [
       {
@@ -30,7 +33,7 @@
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "terminal.integrated.cursorBlinking": true,
   "terminal.integrated.fontSize": 14,
-  "terminal.integrated.fontWeight": "600", //semibold
+  "terminal.integrated.fontWeight": "600", //medium
   "terminal.integrated.fontFamily": "Fira Code, Operator Mono",
   // Terminal customization
   "workbench.colorCustomizations": {
@@ -61,16 +64,17 @@
   "workbench.sideBar.location": "right",
   "tabnine.experimentalAutoImports": true,
   "C_Cpp.default.cStandard": "c11",
-  "C_Cpp.default.cppStandard": "c++20",
+  "C_Cpp.default.cppStandard": "c++17",
   // Code Runner
   "code-runner.runInTerminal": true,
   "code-runner.saveFileBeforeRun": true,
   "code-runner.saveAllFilesBeforeRun": true,
   "code-runner.terminalRoot": "/",
   "code-runner.executorMap": {
-    // "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt.exe && $dir$fileNameWithoutExt.exe", //terminal
-    "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt.exe && timeout 5s $dir$fileNameWithoutExt.exe < input.txt > output.txt || (echo -n > output.txt && echo 'Time Limit Gone')", //input output txt with timeout of 5 seconds
-    "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt.exe && $dir$fileNameWithoutExt.exe < input.txt > output.txt",
+    "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt.exe && $dir$fileNameWithoutExt.exe", //terminal
+    // "c": "cd $dir && gcc $fileName -o $fileNameWithoutExt.exe && timeout 5s $dir$fileNameWithoutExt.exe < input.txt > output.txt || (echo -n > output.txt && echo 'Time Limit Gone')", //input output txt with timeout of 5 seconds
+    "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt.exe && $dir$fileNameWithoutExt.exe", //terminal
+    // "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt.exe && timeout 5s $dir$fileNameWithoutExt.exe < input.txt > output.txt || (echo -n > output.txt && echo 'Time Limit Gone')", //input output txt with timeout of 5 seconds
     "javascript": "node",
     "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
     "zig": "zig run",
