--- a/settings.json
+++ b/settings.json
@@ -2,11 +2,22 @@
   "workbench.colorTheme": "Learn with Sumit - Vintage",
   "editor.wordWrap": "on",
   "editor.minimap.enabled": true,
-  "window.zoomLevel": 1,
+  "editor.stickyScroll.enabled": true,
+  "editor.guides.bracketPairs": true,
+  "editor.accessibilitySupport": "off",
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "workbench.sideBar.location": "right",
+  //Tabnine config
+  "tabnine.experimentalAutoImports": true,
   //Live server config
   "liveServer.settings.donotShowInfoMsg": true,
   //Material icon theme config
-  "workbench.iconTheme": "material-icon-theme",
+  "workbench.iconTheme": "vs-nomo-dark",
+  // Project manager
+  "projectManager.git.baseFolders": [
+    "f:\\\\projects"
+  ],
   // Cursor
   "editor.cursorSmoothCaretAnimation": "on",
   "editor.cursorWidth": 3,
@@ -18,7 +29,7 @@
   // "editor.fontLigatures": "'calt', 'ss01'",
   "editor.fontLigatures": "'calt','ss01', 'ss02', 'ss03', 'ss04', 'ss05', 'ss06', 'zero', 'onum'",
   "editor.fontSize": 15.5,
-  "editor.fontWeight": "400", //regular
+  "editor.fontWeight": "400", //Regular
   "editor.tokenColorCustomizations": {
     "textMateRules": [
       {
@@ -32,8 +43,8 @@
   //Terminal
   "terminal.integrated.defaultProfile.windows": "Git Bash",
   "terminal.integrated.cursorBlinking": true,
-  "terminal.integrated.fontSize": 14,
-  "terminal.integrated.fontWeight": "600", //medium
+  "terminal.integrated.fontSize": 15.5,
+  "terminal.integrated.fontWeight": "500", //Medium
   "terminal.integrated.fontFamily": "Fira Code, Operator Mono",
   // Terminal customization
   "workbench.colorCustomizations": {
@@ -58,14 +69,13 @@
     "terminal.ansiWhite": "#A89984",
     "terminal.ansiYellow": "#FAC03B"
   },
-  "editor.accessibilitySupport": "off",
-  "editor.formatOnSave": true,
-  "editor.formatOnPaste": true,
-  "workbench.sideBar.location": "right",
-  "tabnine.experimentalAutoImports": true,
   "C_Cpp.default.cStandard": "c11",
   "C_Cpp.default.cppStandard": "c++17",
+  //CPH config
+  "cph.general.menuChoices": "cpp java python c",
+  "cph.general.timeOut": 5000,
   // Code Runner
+  "code-runner.ignoreSelection": true,
   "code-runner.runInTerminal": true,
   "code-runner.saveFileBeforeRun": true,
   "code-runner.saveAllFilesBeforeRun": true,
@@ -125,5 +135,7 @@
     "fortran_fixed-form": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "sml": "cd $dir && sml $fileName"
-  }
+  },
+  //JAVA_HOME path
+  "java.jdt.ls.java.home": "C:\\Program Files\\Java\\jdk-20"
 }
