--- a/code-setting/settings.json
+++ b/code-setting/settings.json
@@ -67,6 +67,8 @@
   },
   //extension
   "extensions.autoUpdate": false,
+  //emmet
+  "emmet.triggerExpansionOnTab": true,
   //Tabnine config
   // "tabnine.experimentalAutoImports": true,
   //Live server config
